--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ header {
 	
 }
 
+.listaConteudoDivulgacao {
+
+}
+
 main {
 	background:url("banda.jpg");
 	background-position: center;
@@ -21,7 +25,47 @@ main {
 }
 
 h2 {
-	font-size: 30px;
+	font-size: 50px;
+	width: 100%;
 	font-weight: bold;
+	text-transform: uppercase;
 	color: yellow;
+}
+
+.listaConteudoDivulgacao {
+
+}
+
+.textoSobreBanda {
+	font-size: 20px;
+	color: white;
+	width: 20%;
+	box-sizing: border-box;
+	background: black;
+	padding: 10px;
+	margin: 10px 0px;
+    background: black;
+	border: 5px solid #CDFFCD;
+}
+
+.narracaoSobreBanda {
+	font-size: 20px;
+	color: white;
+	font-style: oblique;
+	width: 20%;
+	box-sizing: border-box;
+	padding: 10px;
+	margin: 10px 0px;
+	background: black;
+	border: 5px solid #CDFFCD;
+}
+
+.sobreShow {
+	font-size: 20px;
+	color: white;
+	width: 20%;
+	box-sizing: border-box;
+	padding: 10px;
+	margin: 10px 0px;
+	background: black;
 }
