--- a/style.css
+++ b/style.css
@@ -10,21 +10,14 @@ header {
 	border-radius: 30px 30px 0px 0px;
 }
 
-.banner {
-	
-}
-
-.listaConteudoDivulgacao {
-
-}
-
-main {
-	background:url("banda.jpg");
+.conteudoPrincipal {
+	background-image:url("banda.jpg");
 	background-position: center;
-	height: 1181px;
+	height: 899px;
 }
 
 h2 {
+	margin-top: 15px;
 	font-size: 50px;
 	width: 100%;
 	font-weight: bold;
@@ -32,40 +25,47 @@ h2 {
 	color: yellow;
 }
 
-.listaConteudoDivulgacao {
-
-}
-
 .textoSobreBanda {
+
 	font-size: 20px;
 	color: white;
 	width: 20%;
 	box-sizing: border-box;
 	background: black;
 	padding: 10px;
-	margin: 10px 0px;
+	margin: 30px 10px;
     background: black;
-	border: 5px solid #CDFFCD;
+	background-color: rgba(20,20,20,0.8);
+	height: 150px;
 }
 
 .narracaoSobreBanda {
+
 	font-size: 20px;
 	color: white;
 	font-style: oblique;
 	width: 20%;
 	box-sizing: border-box;
 	padding: 10px;
-	margin: 10px 0px;
+	margin: 10px 10px;
 	background: black;
-	border: 5px solid #CDFFCD;
+	background-color: rgba(20,20,20,0.8);
+	height: 150px;
 }
 
 .sobreShow {
 	font-size: 20px;
 	color: white;
-	width: 20%;
+	width: 30%;
 	box-sizing: border-box;
 	padding: 10px;
-	margin: 10px 0px;
-	background: black;
+	margin: 10px 10px;
+	background-color: rgba(20,20,20,0.8);
+	height: 100px;
+}
+
+.inputContato {
+	width: 20%;
+	margin: 20px 10px;
+	padding: 5px;
 }
