--- a/flexbox.css
+++ b/flexbox.css
@@ -14,8 +14,24 @@
 
 }
 
+
 .containerContato {
 	display: flex;
 	flex-direction: column;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+}
+
+
+
+		/*MOBILE*/
+@media(max-width: 768px) {
+
+	.containerCabecalho {
+		display: flex;
+		justify-content: center;
+		
+	}
 
 }
